--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="jqueryUI/jquery-ui.css">
 	<link rel="stylesheet" href="css/normal.css">
 	<link rel="stylesheet" href="css/pages.css">
-	<script src="https://unpkg.com/vue/dist/vue.js"></script>
+	<script src="js/vue.min.js"></script>
 	<script src="jqueryUI/external/jquery/jquery.js"></script>
 	<script src="jqueryUI/jquery-ui.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
